Refactor TableFactory Module for Java 11 Compatibility (#25)
* Initial plan

* Update TableFactory pom.xml for Java 11 and remove incorrect TODO comments

Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>